public/styles/style.css
* {
	box-sizing: border-box;
	font-family: 'Playwrite DE Grund', cursive;
}
:root {
	--BG: antiqueWhite;
	--FG: rgb(231, 199, 156);
}
body {
	width: 100vw;
	height: 100vh;
	overflow-y: hidden;
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
	user-select: none;
}
header {
	width: 100%;
	height: 50px;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: var(--FG);
}

main {
	width: 100%;
	height: calc(100% - 75px);
	/* border: 1px solid blue; */
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	background-color: var(--BG);

	& #section_container {
		width: 100%;
		/* border: 1px solid green; */
		height: 80%;
		display: flex;
		align-items: center;
		flex-wrap: nowrap;
		overflow-x: auto;
		gap: 40px;
		scrollbar-width: none;
		overflow-y: hidden;
		/* padding: 0 calc(30% + (40px * 3)); */
		& .spacer {
			width: 30%;
			min-width: 30%;
			height: 100%;
			opacity: 0;
		}
		& .section {
			--r: 163;
			--g: 0;
			--b: 16;
			width: 30%;
			min-width: 30%;
			height: 98%;
			max-height: 98%;
			border: 1px solid white;
			overflow-y: hidden;
			display: flex;
			flex-direction: column;
			transition: scale 0.3s;
			position: relative;
			border-radius: 25px;
			box-shadow: 0 0 5px 1px white;
			/* &.dragging-manual + .section::before {
				content: '';
				position: absolute;
				width: 100%;
				height: 100%;
				border-radius: 25px;
				border: 2px solid black;
				left: calc(-100% - 40px);
				top: -2px;
			} */
			&:not(.selected) {
				scale: 0.8;
			}
			& .top-bar {
				width: 100%;
				height: 10%;
				padding: 0 10px;
				background-color: rgb(var(--r), var(--g), var(--b));
				display: flex;
				align-items: center;
				justify-content: space-between;
				gap: 5px;
				border-bottom: 1px solid white;
				.button {
					visibility: hidden;
				}
				&:hover .button {
					visibility: visible;
				}
				& .title {
					font-weight: 500;
					width: 60%;
					outline: none;
					border: none;
					height: 25px;
					font-size: 17px;
					color: white;
					background-color: transparent;
					padding-left: 10px;
				}
				.buttons {
					display: flex;
					gap: 5px;
				}
			}
			& .to-do-container {
				width: 100%;
				height: 100%;
				overflow-y: auto;
				overflow-x: hidden;
				/* border: 1px solid red; */
				scrollbar-width: thin;
				scrollbar-color: rgb(var(--r), var(--g), var(--b)) transparent;
				display: flex;
				flex-direction: column;
				padding: 10px;
				gap: 10px;
				background-image: linear-gradient(
					135deg,
					rgba(var(--r), var(--g), var(--b), 0.4),
					rgba(var(--r), var(--g), var(--b), 0.3)
				);
				& .to-do:has(+ .dragging-manual)::after {
					content: '';
					position: absolute;
					width: 100%;
					height: 100%;
					border-radius: 25px;
					border: 2px solid white;
					top: calc(100% + 8px);
					left: -2px;
					scale: 1.04;
				}
				& .to-do {
					padding: 12px 15px;
					border-radius: 25px;
					background-image: linear-gradient(
						45deg,
						rgba(var(--r), var(--g), var(--b), 0.4),
						rgba(var(--r), var(--g), var(--b), 0.2)
					);
					display: flex;
					gap: 5px;
					position: relative;
					justify-content: space-between;
					/* transition: top 0.05s; */
					&.completed {
						background-color: transparent;
						background-image: none;
						border: 2px solid rgba(var(--r), var(--g), var(--b), 0.4);
						.text {
							text-decoration: line-through rgba(var(--r), var(--g), var(--b), 0.6)
								solid 2px;
						}
					}
					&.dragging-manual {
						scale: 1.04;
						opacity: 0.5;
						.button.move:hover {
							cursor: grabbing !important;
						}
						& + .to-do::before {
							content: '';
							position: absolute;
							width: 100%;
							height: 100%;
							border-radius: 25px;
							border: 2px solid white;
							top: calc(-100% - 12px);
							left: -2px;
							scale: 1.04;
						}
					}
					& .text {
						width: 60%;
						background-color: transparent;
						border: none;
						color: white;
						outline: none;
						font-weight: 500;
						font-size: 15px;
						user-select: none;
						-webkit-user-select: none;
						-moz-user-select: none;
						-ms-user-select: none;
						user-select: none;
						&::placeholder {
							color: rgba(255, 255, 255, 0.75);
						}
					}
					& .buttons {
						display: flex;
						gap: 5px;
					}
					& .button {
						/* width: 22px;
						min-width: 22px;
						height: 22px; */
						visibility: hidden;
					}
					&:hover .button {
						visibility: visible;
					}
				}
			}
			& .overlay {
				width: 100%;
				height: 100%;
				position: absolute;
				inset: 0;
				background-color: var(--BG);
				opacity: 0.8;
				cursor: pointer !important;
			}
			& .color-input {
				position: absolute;
				visibility: hidden;
			}
		}
	}
	& #nav {
		width: 75%;
		height: 10%;
		/* border: 1px solid purple; */
		display: flex;
		justify-content: center;
		align-items: center;
		gap: 10px;
		border-bottom: 2px solid black;
		flex-wrap: wrap;
		padding-bottom: 10px;
		/* overflow-x: auto;
		scrollbar-width: thin; */
		& button {
			display: flex;
			justify-content: start;
			align-items: center;
			cursor: pointer;
			width: fit-content;
			min-width: 50px;
			height: 25px;
			border-radius: 5px;
			border: 2px outset white;
			color: white;
			font-size: 13px;
			/* background-color: rgb(16, 0, 163); */
			transition: scale 0.1s;
			&:hover {
				scale: 1.1;
			}
			&.active {
				scale: 1.2;
			}
		}
		& #add_section {
			background-color: lightgrey;
			color: black;
			width: 25px;
			min-width: 25px;
			display: flex;
			justify-content: center;
			align-items: center;
			& svg {
				scale: 1.3;
			}
		}
	}
}

.button {
	background-color: lightgrey;
	border-radius: 50%;
	width: 25px;
	min-width: 25px;
	height: 25px;
	text-decoration: none;
	color: black;
	display: flex;
	justify-content: center;
	align-items: center;
	border: 2px outset white;
	position: relative;
	&.move {
		cursor: grab;
		&:active {
			cursor: grabbing;
		}
	}
	#overlay {
		position: absolute;
		width: 100%;
		height: 100%;
		border-radius: 50%;
		background-color: transparent;
		z-index: 1;
	}
	&:hover {
		/* border: 2px inset white; */
		scale: 1.1;
	}
	&:not(button) svg {
		width: 72%;
		height: 72%;
	}
	&:not(a) svg {
		scale: 1.3;
	}
	&:is(label) svg {
		scale: 1;
	}
}

footer {
	font-size: 12px;
	width: 100%;
	height: 25px;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: var(--FG);
}

#mobile_overlay {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	background-color: var(--BG);
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 2000;
	display: none;
}

@media only screen and (max-width: 1000px) {
	#mobile_overlay {
		display: block !important;
	}
	body {
		overflow: hidden;
	}
	main {
		display: none;
	}
	/* #section_container {
		gap: 20px !important;
		& .section {
			width: 70% !important;
			min-width: 70% !important;
			& .button {
				visibility: visible !important;
			}
			& .to-do {
				& .buttons {
					gap: 2px !important;
				}
				& .button {
					scale: 0.8 !important;
					&:hover {
						scale: 0.9 !important;
					}
				}
			}
		}
		& > .spacer {
			width: 1px !important;
		}
	} */
}

